ARTS-3: fix title wrapping on footer menu.

--- a/doca_theme/src/sass/components/footer-menu/_footer-menu.scss
+++ b/doca_theme/src/sass/components/footer-menu/_footer-menu.scss
@@ -11,23 +11,25 @@
   @extend %list-unstyled__wrapper;
 }
 
+.footer-menu__column> ul.footer-menu {
+  margin-top: 1rem;
+}
+
 .footer-menu__column, %footer-menu__column {
   display: inline-block;
   vertical-align: top;
   @include breakpoint($medium) {
     float: left;
-    width: 25%;
-  }
-  .no-mediaqueries & {
-    float: left;
-    width: 25%;
+    width: 24%;
+    margin-right: 1%;
   }
 }
 
 .footer-menu__title, %footer-menu__title {
   @extend %footer__heading;
   @include underline-on-hover;
-  display: inline-block;
+  display: inline;
+  line-height: 1.5;
 }
 
 .footer-menu__item, %footer-menu__item {
